# Python-Enterprise-Automation-Framework

./: .env.local  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements.txt  settings.py
core/: base_test_classes.py  consts.py
core/api/: auth.py  base.py  base_api.py  session_manager.py
core/api/base_refactored/: api_client.py  api_wrapper.py
core/api/labs/: action.py  autotranslation.py  base.py  criteria.py  image.py  lab.py  language.py  lms_organisation.py  scriptproject.py  sessions.py  step.py  task.py  translations.py  variable.py  virtual_networks.py  vm.py  workspace_configuration.py  workspace_configuration_item.py
core/api/lms/: activity.py  activity_part.py  activity_record.py  activity_workflow.py  activity_workflow_aggregates.py  base.py  base_api.py  datagrid.py  grading_reports.py  objective.py  objective_reports.py  objective_workflow.py  objective_workflow_aggregates.py  personal_enrollment.py  resource_library.py
core/api/platform/: base.py  group.py  permission.py  role_pattern.py  roles.py  team.py  user.py  user_roles.py
core/api/scorm/: attempts.py  lti.py  organizations.py
core/fixture_generators/: auth.py  driver.py
core/models/: idp.py  query.py  user.py
core/models/labs/: acceptance_criteria.py  actions.py  image.py  lab.py  language.py  lms.py  scriptproject.py  session.py  step.py  step_criteria.py  task.py  translations.py  variable_template.py  virtual_network.py  vm.py  workspace_configuration.py
core/models/lms/: activity.py  activity_part.py  activity_workflow_aggregate.py  command.py  datagrid.py  lms_base.py  lms_user.py  objective.py  objective_workflow_aggregate.py  personal_enrollments.py  proctoring_session.py  reports.py  resource_library.py
core/models/lti/: launch.py  lti_resource_library.py
core/models/platform/: base.py  group.py  permission.py  platform_user.py  role.py  role_pattern.py  team.py  tenant.py  user_role.py
core/models/scorm/: attempts.py  organization.py
core/web/elements/: base_element.py
core/web/pages/: base_page.py  identity.py  platform_base_page.py
scripts/: prepare_stand.py
test_data/: __init__.py  stand_config.py  users.py
test_data/labs/: constants.py
tests/: conftest.py
tests/classroom/: conftest.py
tests/classroom/test_classroom/: test_classroom_creation.py  test_update_class_details.py
tests/classroom/test_classroom_session/: test_moderator_role.py  test_presenter_role.py  test_sesison_output.py  test_session_creation.py  test_session_interaction.py  test_virtual_background.py
util/: helpers.py  labels.py  random.py  url.py
util/api/: allure_reporting.py
util/assertions/: assertpy_extensions.py  common_assertions.py
(+64 files in other folders)
